// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots app/pages/collectivite/Referentiels/ActionDiscussions/ActionDiscussionsPanel Vue Fermes 1`] = `
Array [
  <div
    className="flex fr-px-2w fr-pb-2w"
  >
    <div
      className="flex items-center py-1 px-3 text-sm text-white bg-bf500 rounded-full"
    >
      <span
        className="w-3 h-3 mr-2 bg-yellow-400"
      />
      Commentaires
    </div>
    <div
      className="ml-auto border border-gray-200"
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onPointerDown={[Function]}
    >
      <button
        className="w-24 flex items-center justify-between py-0.5 pl-2 pr-1 text-sm capitalize hover:bg-gray-100"
        data-test="ActionDiscussionsChangeVue"
      >
        Fermés
         
        <div
          className="fr-fi-arrow-down-s-line mt-0.5 ml-1 scale-90"
        />
      </button>
    </div>
  </div>,
  <div
    className="fr-pt-2w fr-pb-1w fr-px-2w bg-gray-100"
    data-test="ActionDiscussionsNouvelleDiscussion"
  >
    <div
      className="flex items-start w-full"
    >
      <div
        className="w-[1px] mr-[-1px]"
      />
      <textarea
        className="resize-none w-full py-2 px-3 text-sm cursor-text rounded-lg outline outline-offset-0 !outline-1 outline-gray-300 focus:outline-blue-500 bg-white"
        onChange={[Function]}
        placeholder="Écrire un nouveau commentaire..."
        value=""
      />
    </div>
  </div>,
  <div
    className="overflow-y-auto"
    data-test="ActionDiscussionsFeed"
  >
    <div>
      <div
        className="border-b border-gray-200"
      >
        <div
          className="p-4 border-l-4 border-yellow-400"
        >
          <div>
            <div
              className="flex items-start mb-4"
            >
              <div
                className="grow mr-4"
              >
                <div
                  className="flex items-center mb-1"
                >
                  <span
                    className="h-5 w-5 flex items-center justify-center text-sm leading-none rounded-full border border-gray-900"
                  >
                    Y
                  </span>
                  <span
                    className="mx-2 font-bold text-sm"
                  >
                    Yolo Dodo
                  </span>
                  <span
                    className="text-gray-400 text-sm"
                  >
                    25 octobre 2022
                  </span>
                </div>
                <p
                  className="text-sm whitespace-pre-wrap fr-mb-0"
                  style={
                    Object {
                      "overflowWrap": "anywhere",
                    }
                  }
                >
                  Bonjour le monde, ceci est un message.
                </p>
              </div>
              <div
                className="flex items-center"
              >
                <div
                  className="shrink-0 mr-1 border border-gray-200"
                >
                  <button
                    className="py-1 px-2 text-sm text-bf500 hover:bg-gray-100"
                    onClick={[Function]}
                  >
                    Rouvrir
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="border-b border-gray-200"
      >
        <div
          className="p-4 border-l-4 border-yellow-400"
        >
          <div>
            <div
              className="flex items-start mb-4"
            >
              <div
                className="grow mr-4"
              >
                <div
                  className="flex items-center mb-1"
                >
                  <span
                    className="h-5 w-5 flex items-center justify-center text-sm leading-none rounded-full border border-gray-900"
                  >
                    Y
                  </span>
                  <span
                    className="mx-2 font-bold text-sm"
                  >
                    Yolo Dodo
                  </span>
                  <span
                    className="text-gray-400 text-sm"
                  >
                    25 octobre 2022
                  </span>
                </div>
                <p
                  className="text-sm whitespace-pre-wrap fr-mb-0"
                  style={
                    Object {
                      "overflowWrap": "anywhere",
                    }
                  }
                >
                  Ces discussions sont fermés
                </p>
              </div>
              <div
                className="flex items-center"
              >
                <div
                  className="shrink-0 mr-1 border border-gray-200"
                >
                  <button
                    className="py-1 px-2 text-sm text-bf500 hover:bg-gray-100"
                    onClick={[Function]}
                  >
                    Rouvrir
                  </button>
                </div>
              </div>
            </div>
            <div
              className="flex items-start mb-4"
            >
              <div
                className="grow mr-4"
              >
                <div
                  className="flex items-center mb-1"
                >
                  <span
                    className="h-5 w-5 flex items-center justify-center text-sm leading-none rounded-full border border-gray-900"
                  >
                    Y
                  </span>
                  <span
                    className="mx-2 font-bold text-sm"
                  >
                    Yolo Dodo
                  </span>
                  <span
                    className="text-gray-400 text-sm"
                  >
                    25 octobre 2022
                  </span>
                </div>
                <p
                  className="text-sm whitespace-pre-wrap fr-mb-0"
                  style={
                    Object {
                      "overflowWrap": "anywhere",
                    }
                  }
                >
                  Effectivement
                </p>
              </div>
              <div
                className="flex items-center"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`Storyshots app/pages/collectivite/Referentiels/ActionDiscussions/ActionDiscussionsPanel Vue Ouverts 1`] = `
Array [
  <div
    className="flex fr-px-2w fr-pb-2w"
  >
    <div
      className="flex items-center py-1 px-3 text-sm text-white bg-bf500 rounded-full"
    >
      <span
        className="w-3 h-3 mr-2 bg-yellow-400"
      />
      Commentaires
    </div>
    <div
      className="ml-auto border border-gray-200"
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onPointerDown={[Function]}
    >
      <button
        className="w-24 flex items-center justify-between py-0.5 pl-2 pr-1 text-sm capitalize hover:bg-gray-100"
        data-test="ActionDiscussionsChangeVue"
      >
        Ouverts
         
        <div
          className="fr-fi-arrow-down-s-line mt-0.5 ml-1 scale-90"
        />
      </button>
    </div>
  </div>,
  <div
    className="fr-pt-2w fr-pb-1w fr-px-2w bg-gray-100"
    data-test="ActionDiscussionsNouvelleDiscussion"
  >
    <div
      className="flex items-start w-full"
    >
      <div
        className="w-[1px] mr-[-1px]"
      />
      <textarea
        className="resize-none w-full py-2 px-3 text-sm cursor-text rounded-lg outline outline-offset-0 !outline-1 outline-gray-300 focus:outline-blue-500 bg-white"
        onChange={[Function]}
        placeholder="Écrire un nouveau commentaire..."
        value=""
      />
    </div>
  </div>,
  <div
    className="overflow-y-auto"
    data-test="ActionDiscussionsFeed"
  >
    <div>
      <div
        className="border-b border-gray-200"
      >
        <div
          className="p-4 border-l-4 border-yellow-400"
        >
          <div>
            <div
              className="flex items-start mb-4"
            >
              <div
                className="grow mr-4"
              >
                <div
                  className="flex items-center mb-1"
                >
                  <span
                    className="h-5 w-5 flex items-center justify-center text-sm leading-none rounded-full border border-gray-900"
                  >
                    Y
                  </span>
                  <span
                    className="mx-2 font-bold text-sm"
                  >
                    Yolo Dodo
                  </span>
                  <span
                    className="text-gray-400 text-sm"
                  >
                    25 octobre 2022
                  </span>
                </div>
                <p
                  className="text-sm whitespace-pre-wrap fr-mb-0"
                  style={
                    Object {
                      "overflowWrap": "anywhere",
                    }
                  }
                >
                  Bonjour le monde, ceci est un message.
                </p>
              </div>
              <div
                className="flex items-center"
              >
                <div
                  className="shrink-0 mr-1 border border-gray-200"
                >
                  <button
                    className="py-1 px-2 text-sm text-bf500 hover:bg-gray-100"
                    onClick={[Function]}
                  >
                    Fermer
                  </button>
                </div>
              </div>
            </div>
          </div>
          <div
            className="flex items-start w-full"
          >
            <div
              className="w-[1px] mr-[-1px]"
            />
            <textarea
              className="resize-none w-full py-2 px-3 text-sm cursor-text rounded-lg outline outline-offset-0 !outline-1 outline-gray-300 focus:outline-blue-500 resize-none"
              onChange={[Function]}
              placeholder="Répondre..."
              value=""
            />
          </div>
        </div>
      </div>
      <div
        className="border-b border-gray-200"
      >
        <div
          className="p-4 border-l-4 border-yellow-400"
        >
          <div>
            <div
              className="flex items-start mb-4"
            >
              <div
                className="grow mr-4"
              >
                <div
                  className="flex items-center mb-1"
                >
                  <span
                    className="h-5 w-5 flex items-center justify-center text-sm leading-none rounded-full border border-gray-900"
                  >
                    Y
                  </span>
                  <span
                    className="mx-2 font-bold text-sm"
                  >
                    Yolo Dodo
                  </span>
                  <span
                    className="text-gray-400 text-sm"
                  >
                    25 octobre 2022
                  </span>
                </div>
                <p
                  className="text-sm whitespace-pre-wrap fr-mb-0"
                  style={
                    Object {
                      "overflowWrap": "anywhere",
                    }
                  }
                >
                  Une autre discussion
                </p>
              </div>
              <div
                className="flex items-center"
              >
                <div
                  className="shrink-0 mr-1 border border-gray-200"
                >
                  <button
                    className="py-1 px-2 text-sm text-bf500 hover:bg-gray-100"
                    onClick={[Function]}
                  >
                    Fermer
                  </button>
                </div>
              </div>
            </div>
            <div
              className="flex items-start mb-4"
            >
              <div
                className="grow mr-4"
              >
                <div
                  className="flex items-center mb-1"
                >
                  <span
                    className="h-5 w-5 flex items-center justify-center text-sm leading-none rounded-full border border-gray-900"
                  >
                    Y
                  </span>
                  <span
                    className="mx-2 font-bold text-sm"
                  >
                    Yolo Dodo
                  </span>
                  <span
                    className="text-gray-400 text-sm"
                  >
                    25 octobre 2022
                  </span>
                </div>
                <p
                  className="text-sm whitespace-pre-wrap fr-mb-0"
                  style={
                    Object {
                      "overflowWrap": "anywhere",
                    }
                  }
                >
                  Avec plusieurs commentaires!
                </p>
              </div>
              <div
                className="flex items-center"
              />
            </div>
          </div>
          <div
            className="flex items-start w-full"
          >
            <div
              className="w-[1px] mr-[-1px]"
            />
            <textarea
              className="resize-none w-full py-2 px-3 text-sm cursor-text rounded-lg outline outline-offset-0 !outline-1 outline-gray-300 focus:outline-blue-500 resize-none"
              onChange={[Function]}
              placeholder="Répondre..."
              value=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;
